Fix about page padding on tablets

--- a/src/layout.css
+++ b/src/layout.css
@@ -49,7 +49,7 @@ a {
 
     .page {
         flex-grow: 1;
-        padding: 42px 42px 42px 252px;
+        padding: 52px 42px 42px 252px;
     }
 }
 
